--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -18,7 +18,7 @@
     <div class="herosec">
       <div class="herocont">
         <h1>I Knew You’d Come!</h1>
-        <p>Welcome to my reel real life...</p>
+        <p>Welcome to my real life...</p>
         <p>Hi there! I'm Amstrong👋,</p>
         <p>A web development learner 🌱,</p>
         <p>A design explorer 🎨,</p>
