html,css,codes changes

--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="header">
-         <h1 class="tamilletter"><a href="../index.html">ஆ</a></h1>
+      <h1 class="tamilletter"><a href="../index.html">ஆ</a></h1>
       <ul class="navlist">
         <a href="#jrney"><li>About</li></a>
         <a href=""><li>Resume</li></a>
@@ -91,9 +91,9 @@
         <div class="jcont">
           <h2>Lessons from Home</h2>
           <p>
-            "I come from Ulundurpet, a place that taught me the value of
-            curiosity and hard work. Growing up here shaped my perspective and
-            inspired me to explore new opportunities."
+            Born in Pali village, but grew up in Ulundurpet. This is where I
+            learned my life lessons. Now, I am ready to explore new
+            opportunities.
           </p>
         </div>
         <div class="images">
@@ -104,9 +104,9 @@
         <div class="jcont">
           <h2>10th Grade Journey</h2>
           <p>
-            "During my 10th grade, I faced new challenges at school that taught
-            me perseverance and problem-solving. These experiences shaped my
-            mindset and prepared me for future growth."
+            I did my 10th grade at Beschi Hr Sec School. There, I faced
+            challenges that taught me how to solve problems. This experience
+            prepared me for my future.
           </p>
         </div>
         <div class="images"><img src="../asset/beschi .jpeg" alt="" /></div>
@@ -115,9 +115,8 @@
         <div class="jcont">
           <h2>12th Grade Milestone</h2>
           <p>
-            "My 12th-grade year was a time of focus and determination. I tackled
-            academic challenges, developed discipline, and prepared myself for
-            the next chapter of learning and growth."
+            My time in a Government School for 12th grade changed me. I became
+            more focused. Now, I am ready for new challenges.
           </p>
         </div>
         <div class="images"><img src="../asset/12th.png" alt="" /></div>
@@ -126,9 +125,9 @@
         <div class="jcont">
           <h2>Curious Traveler</h2>
           <p>
-            "I love traveling and exploring new places, cultures, and
+            I love traveling and exploring new places, cultures, and
             experiences. Traveling inspires me, broadens my perspective, and
-            encourages me to embrace new challenges in life."
+            encourages me to embrace new challenges in life.
           </p>
         </div>
         <div class="images"><img src="../asset/travelling.jpg" alt="" /></div>
