images added and code changes

--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -125,9 +125,9 @@
         <div class="jcont">
           <h2>Curious Traveler</h2>
           <p>
-            I love traveling and exploring new places, cultures, and
-            experiences. Traveling inspires me, broadens my perspective, and
-            encourages me to embrace new challenges in life.
+            I love traveling and visiting new places. I enjoy learning about
+            different cultures and trying new experiences. Traveling inspires me
+            and helps me see life in a new way.
           </p>
         </div>
         <div class="images"><img src="../asset/travelling.jpg" alt="" /></div>
