--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>Creating meaningful and impactful websites</p>
         </div>
         <div class="myimg">
-          <img src="./asset/IMG_20251102_175105_246.jpg" alt="" />
+          <img src="./asset/amsheroimgjpg.jpg" alt="" />
         </div>
       </div>
     </div>
