--- a/index.html
+++ b/index.html
@@ -145,13 +145,12 @@
       <div class="cardimg"><img src="./asset/ecom.png" alt="" /></div>
     </div>
     <div class="sec2">
-      <h2>Achievments</h2>
+      <h2>Achievements</h2>
       <p>
-        “Achievements that reflect my learning journey.”<br />
+      Achievements that reflect my learning journey.<br />
         <span>Here’s what I’ve achieved so far !</span>
       </p>
     </div>
-
     <div class="achievments">
       <div class="achievbox">
         <div class="achievimg">
