--- a/index.html
+++ b/index.html
@@ -102,6 +102,63 @@
             <p>75%</p>
           </div>
         </div>
+         <div class="icon">
+          <img src="./asset/html.png" alt="" />
+          <div class="score">
+            <div class="score-outer">
+              <div class="score-inner"></div>
+            </div>
+            <p>75%</p>
+          </div>
+        </div>
+        <div class="icon">
+          <img src="./asset/css-3.png" alt="" />
+          <div class="score">
+            <div class="score-outer">
+              <div class="score-inner"></div>
+            </div>
+            <p>75%</p>
+          </div>
+        </div>
+        <div class="icon">
+          <img src="./asset/javascript.png" alt="" />
+          <div class="score">
+            <div class="score-outer">
+              <div class="score-inner"></div>
+            </div>
+            <p>75%</p>
+          </div>
+        </div>
+        <div class="icon">
+          <img
+            src="./asset/postgresql_plain_wordmark_logo_icon_146390.webp"
+            alt=""
+          />
+          <div class="score">
+            <div class="score-outer">
+              <div class="score-inner"></div>
+            </div>
+            <p>75%</p>
+          </div>
+        </div>
+        <div class="icon">
+          <img src="./asset/fastapi-removebg-preview.png" alt="" />
+          <div class="score">
+            <div class="score-outer">
+              <div class="score-inner"></div>
+            </div>
+            <p>75%</p>
+          </div>
+        </div>
+        <div class="icon">
+          <img src="./asset/figma.png" alt="" />
+          <div class="score">
+            <div class="score-outer">
+              <div class="score-inner"></div>
+            </div>
+            <p>75%</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="sec1" id="works">
