--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>Creating meaningful and impactful websites</p>
         </div>
         <div class="myimg">
-          <img src="./asset/amsheroimgjpg.jpg" alt="" />
+          <img src="./asset/myphoto.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -217,20 +217,31 @@
         <p>Secured 2nd place</p>
       </div>
       <div class="achievbox">
-        <div class="achievimg"><img src="" alt="" /></div>
+        <div class="achievimg"><img src="./asset/katturai.jpg" alt="" />
+        <h3>Essay Writing Competition
+        </h3>
+        <p> Secured 2nd Place</p>
+      </div>
       </div>
       <div class="achievbox">
-        <div class="achievimg"><img src="" alt="" /></div>
+        <div class="achievimg"><img src="./asset/abacus.jpg" alt="" />
+        <h3>Abacus Level 1 and Level 2</h3>
+        <p>Successfully completed</p>
+        </div>
       </div>
       <div class="achievbox">
-        <div class="achievimg"><img src="" alt="" /></div>
+        <div class="achievimg"><img src="./asset/englishcertificate.jpg" alt="" />
+        <h3>Completed English Language Training </h3>
+        <p>focus on communication skills</p>
+        </div>
       </div>
       <div class="achievbox">
-        <div class="achievimg"><img src="" alt="" /></div>
+        <div class="achievimg"><img src="./asset/volleyball.jpg" alt="" />
+        <h3>Won First Prize in School Level Volleyball Competition</h3></div>
       </div>
-      <div class="achievbox">
+      <!-- <div class="achievbox">
         <div class="achievimg"><img src="" alt="" /></div>
-      </div>
+      </div> -->
     </div>
 
     <div class="footer" id="contact">
@@ -260,7 +271,7 @@
             <a href=""><img src="./asset/linkedin.png" alt="" /></a>
           </div>
           <div>
-            <a href=""><img src="./asset/instagram.png" alt="" /></a>
+            <a href="https://www.instagram.com/lost.amz._/"><img src="./asset/instagram.png" alt="" /></a>
           </div>
           <div>
             <a
