--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p>75%</p>
           </div>
         </div>
-         <div class="icon">
+        <div class="icon">
           <img src="./asset/html.png" alt="" />
           <div class="score">
             <div class="score-outer">
@@ -204,7 +204,7 @@
     <div class="sec2">
       <h2>Achievements</h2>
       <p>
-      Achievements that reflect my learning journey.<br />
+        Achievements that reflect my learning journey.<br />
         <span>Here’s what I’ve achieved so far !</span>
       </p>
     </div>
@@ -217,31 +217,39 @@
         <p>Secured 2nd place</p>
       </div>
       <div class="achievbox">
-        <div class="achievimg"><img src="./asset/katturai.jpg" alt="" />
-        <h3>Essay Writing Competition
-        </h3>
-        <p> Secured 2nd Place</p>
-      </div>
-      </div>
-      <div class="achievbox">
-        <div class="achievimg"><img src="./asset/abacus.jpg" alt="" />
-        <h3>Abacus Level 1 and Level 2</h3>
-        <p>Successfully completed</p>
+        <div class="achievimg">
+          <img src="./asset/katturai.jpg" alt="" />
+          <h3>Essay Writing Competition</h3>
+          <p>Secured 2nd Place</p>
         </div>
       </div>
       <div class="achievbox">
-        <div class="achievimg"><img src="./asset/englishcertificate.jpg" alt="" />
-        <h3>Completed English Language Training </h3>
-        <p>focus on communication skills</p>
+        <div class="achievimg">
+          <img src="./asset/abacus.jpg" alt="" />
+          <h3>Abacus Level 1 and Level 2</h3>
+          <p>Successfully completed</p>
         </div>
       </div>
       <div class="achievbox">
-        <div class="achievimg"><img src="./asset/volleyball.jpg" alt="" />
-        <h3>Won First Prize in School Level Volleyball Competition</h3></div>
+        <div class="achievimg">
+          <img src="./asset/englishcertificate.jpg" alt="" />
+          <h3>Completed English Language Training</h3>
+          <p>focus on communication skills</p>
+        </div>
       </div>
-      <!-- <div class="achievbox">
-        <div class="achievimg"><img src="" alt="" /></div>
-      </div> -->
+      <div class="achievbox">
+        <div class="achievimg">
+          <img src="./asset/volleyball.jpg" alt="" />
+          <h3>Won First Prize in School Level Volleyball Competition</h3>
+        </div>
+      </div>
+      <div class="achievbox">
+        <div class="achievimg">
+          <img src="./asset/team.jpg" alt="" />
+          <h3>Team Presentation</h3>
+          <p>Secured 2nd place</p>
+        </div>
+      </div>
     </div>
 
     <div class="footer" id="contact">
@@ -271,7 +279,9 @@
             <a href=""><img src="./asset/linkedin.png" alt="" /></a>
           </div>
           <div>
-            <a href="https://www.instagram.com/lost.amz._/"><img src="./asset/instagram.png" alt="" /></a>
+            <a href="https://www.instagram.com/lost.amz._/"
+              ><img src="./asset/instagram.png" alt=""
+            /></a>
           </div>
           <div>
             <a
