link added in icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul class="navlist">
         <a href="#works"><li>Work</li></a>
         <a href="./html_pages/about.html"><li>About</li></a>
-        <a href=""><li>Resume</li></a>
+        <a href="https://drive.google.com/file/d/1m-14sL_SnKT-5q1gdSPQ1aWzKRJ3C-r-/view"><li>Resume</li></a>
         <a href="#contact"><li>Contact</li></a>
       </ul>
     </div>
@@ -51,7 +51,7 @@
             <div class="score-outer">
               <div class="score-inner"></div>
             </div>
-            <p>75%</p>
+            <p>70%</p>
           </div>
         </div>
         <div class="icon">
@@ -60,7 +60,7 @@
             <div class="score-outer">
               <div class="score-inner"></div>
             </div>
-            <p>75%</p>
+            <p>70%</p>
           </div>
         </div>
         <div class="icon">
@@ -69,7 +69,7 @@
             <div class="score-outer">
               <div class="score-inner"></div>
             </div>
-            <p>75%</p>
+            <p>70%</p>
           </div>
         </div>
          <div class="icon">
@@ -78,7 +78,7 @@
             <div class="score-outer">
               <div class="score-inner"></div>
             </div>
-            <p>75%</p>
+            <p>70%</p>
           </div>
         </div>
         <div class="icon">
@@ -90,7 +90,7 @@
             <div class="score-outer">
               <div class="score-inner"></div>
             </div>
-            <p>75%</p>
+            <p>70%</p>
           </div>
         </div>
         <div class="icon">
@@ -99,7 +99,7 @@
             <div class="score-outer">
               <div class="score-inner"></div>
             </div>
-            <p>75%</p>
+            <p>70%</p>
           </div>
         </div>
         <div class="icon">
@@ -108,7 +108,7 @@
             <div class="score-outer">
               <div class="score-inner"></div>
             </div>
-            <p>75%</p>
+            <p>70%</p>
           </div>
         </div>
         
@@ -229,7 +229,7 @@
         </div>
         <div class="media">
           <div>
-            <a href=""><img src="./asset/linkedin.png" alt="" /></a>
+            <a href="https://www.linkedin.com/in/amstrong-b-75b1b7380/"><img src="./asset/linkedin.png" alt="" /></a>
           </div>
           <div>
             <a href="https://www.instagram.com/lost.amz._/"
