--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -157,10 +157,10 @@
         </div>
         <div class="media">
           <div>
-            <a href=""><img src="../asset/linkedin.png" alt="" /></a>
+            <a href="https://www.linkedin.com/in/amstrong-b-75b1b7380/"><img src="../asset/linkedin.png" alt="" /></a>
           </div>
           <div>
-            <a href=""><img src="../asset/instagram.png" alt="" /></a>
+            <a href="https://www.instagram.com/lost.amz._/"><img src="../asset/instagram.png" alt="" /></a>
           </div>
           <div>
             <a
