--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -11,7 +11,7 @@
       <h1 class="tamilletter"><a href="../index.html">ஆ</a></h1>
       <ul class="navlist">
         <a href="#jrney"><li>About</li></a>
-        <a href=""><li>Resume</li></a>
+        <a href="https://drive.google.com/file/d/1m-14sL_SnKT-5q1gdSPQ1aWzKRJ3C-r-/view"><li>Resume</li></a>
         <a href="#contact"><li>Contact</li></a>
       </ul>
     </div>
