--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -1,181 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
-    <link rel="stylesheet" href="../css_pages/about.css" />
-  </head>
-  <body>
-    <div class="header">
-      <h1 class="tamilletter"><a href="../index.html">ஆ</a></h1>
-      <ul class="navlist">
-        <a href="#jrney"><li>About</li></a>
-        <a href="https://drive.google.com/file/d/1m-14sL_SnKT-5q1gdSPQ1aWzKRJ3C-r-/view"><li>Resume</li></a>
-        <a href="#contact"><li>Contact</li></a>
-      </ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About</title>
+  <link rel="stylesheet" href="../css_pages/about.css" />
+</head>
+
+<body>
+  <div class="header">
+    <h1 class="tamilletter"><a href="../index.html">ஆ</a></h1>
+    <ul class="navlist">
+      <a href="#jrney">
+        <li>About</li>
+      </a>
+      <a href="https://drive.google.com/file/d/1m-14sL_SnKT-5q1gdSPQ1aWzKRJ3C-r-/view">
+        <li>Resume</li>
+      </a>
+      <a href="#contact">
+        <li>Contact</li>
+      </a>
+    </ul>
+  </div>
+  <div class="herosec">
+    <div class="herocont">
+      <h1>I Knew You’d Come!</h1>
+      <p>Welcome to my real life...</p>
+      <p>Hi there! I'm Amstrong👋,</p>
+      <p>A web development learner 🌱,</p>
+      <p>A design explorer 🎨,</p>
+      <p>A Curious Traveler 🌍✈️</p>
+      <p>A future full-stack developer 🚀 (loading… 😜)</p>
+      <br />
+      <!-- <h2>Dive in to know what makes me, well... ME!</h2> -->
     </div>
-    <div class="herosec">
-      <div class="herocont">
-        <h1>I Knew You’d Come!</h1>
-        <p>Welcome to my real life...</p>
-        <p>Hi there! I'm Amstrong👋,</p>
-        <p>A web development learner 🌱,</p>
-        <p>A design explorer 🎨,</p>
-        <p>A Curious Traveler 🌍✈️</p>
-        <p>A future full-stack developer 🚀 (loading… 😜)</p>
-        <br />
-        <!-- <h2>Dive in to know what makes me, well... ME!</h2> -->
-      </div>
-      <div class="heroimg">
-        <div class="imgbox">
-          <div class="imglst1">
-            <img src="../asset/IMG_20251227_080616.jpg" alt="" />
-          </div>
-          <div class="imglst1">
-            <img src="../asset/IMG_20251102_175105_246.jpg" alt="" />
-          </div>
-          <div class="imglst1">
-            <img src="../asset/IMG_20251227_082500.jpg" alt="" />
-          </div>
-          <div class="imglst1">
-            <img src="../asset/IMG_20251227_080616.jpg" alt="" />
-          </div>
-          <div class="imglst1">
-            <img src="../asset/IMG_20251102_175105_246.jpg" alt="" />
-          </div>
-          <div class="imglst1">
-            <img src="../asset/IMG_20251227_082500.jpg" alt="" />
-          </div>
+    <div class="heroimg">
+      <div class="imgbox">
+        <div class="imglst1">
+          <img src="../asset/IMG_20251227_080616.jpg" alt="" />
         </div>
-        <div class="imgbox">
-          <div class="imglst2">
-            <img src="../asset/IMG_20250908_213846_569.webp" alt="" />
-          </div>
-          <div class="imglst2">
-            <img src="../asset/IMG_20251227_082916.jpg" alt="" />
-          </div>
-          <div class="imglst2">
-            <img src="../asset/IMG_20251229_113822.jpg" alt="" />
-          </div>
-          <div class="imglst2">
-            <img
-              src="../asset/Screenshot_2025-12-29-11-43-02-05_1c337646f29875672b5a61192b9010f9.jpg"
-              alt=""
-            />
-          </div>
-          <div class="imglst2">
-            <img src="../asset/IMG_20250908_213846_569.webp" alt="" />
-          </div>
-          <div class="imglst2">
-            <img src="../asset/IMG_20251227_082916.jpg" alt="" />
-          </div>
-          <div class="imglst2">
-            <img src="../asset/IMG_20251229_113822.jpg" alt="" />
-          </div>
-          <div class="imglst2">
-            <img
-              src="../asset/Screenshot_2025-12-29-11-43-02-05_1c337646f29875672b5a61192b9010f9.jpg"
-              alt=""
-            />
-          </div>
+        <div class="imglst1">
+          <img src="../asset/IMG_20251102_175105_246.jpg" alt="" />
+        </div>
+        <div class="imglst1">
+          <img src="../asset/IMG_20251227_082500.jpg" alt="" />
+        </div>
+        <div class="imglst1">
+          <img src="../asset/IMG_20251227_080616.jpg" alt="" />
+        </div>
+        <div class="imglst1">
+          <img src="../asset/IMG_20251102_175105_246.jpg" alt="" />
+        </div>
+        <div class="imglst1">
+          <img src="../asset/IMG_20251227_082500.jpg" alt="" />
         </div>
       </div>
-    </div>
-    <div class="journeybox" id="jrney">
-      <div class="text">
-        <h1>A Glimpse of My Journey</h1>
-        <p>Snapshots of experiences that shaped my path.</p>
-      </div>
-      <div class="boximg">
-        <div class="jcont">
-          <h2>Lessons from Home</h2>
-          <p>
-            Born in Pali village, but grew up in Ulundurpet. This is where I
-            learned my life lessons. Now, I am ready to explore new
-            opportunities.
-          </p>
+      <div class="imgbox">
+        <div class="imglst2">
+          <img src="../asset/IMG_20250908_213846_569.webp" alt="" />
         </div>
-        <div class="images">
-          <img src="../asset/place_name.png" alt="" />
+        <div class="imglst2">
+          <img src="../asset/IMG_20251227_082916.jpg" alt="" />
         </div>
-      </div>
-      <div class="boximg">
-        <div class="jcont">
-          <h2>10th Grade Journey</h2>
-          <p>
-            I did my 10th grade at Beschi Hr Sec School. There, I faced
-            challenges that taught me how to solve problems. This experience
-            prepared me for my future.
-          </p>
+        <div class="imglst2">
+          <img src="../asset/IMG_20251229_113822.jpg" alt="" />
         </div>
-        <div class="images"><img src="../asset/beschi .jpeg" alt="" /></div>
-      </div>
-      <div class="boximg">
-        <div class="jcont">
-          <h2>12th Grade Milestone</h2>
-          <p>
-            My time in a Government School for 12th grade changed me. I became
-            more focused. Now, I am ready for new challenges.
-          </p>
+        <div class="imglst2">
+          <img src="../asset/Screenshot_2025-12-29-11-43-02-05_1c337646f29875672b5a61192b9010f9.jpg" alt="" />
         </div>
-        <div class="images"><img src="../asset/12th.png" alt="" /></div>
-      </div>
-      <div class="boximg">
-        <div class="jcont">
-          <h2>Curious Traveler</h2>
-          <p>
-            I love traveling and visiting new places. I enjoy learning about
-            different cultures and trying new experiences. Traveling inspires me
-            and helps me see life in a new way.
-          </p>
+        <div class="imglst2">
+          <img src="../asset/IMG_20250908_213846_569.webp" alt="" />
         </div>
-        <div class="images"><img src="../asset/travelling.jpg" alt="" /></div>
+        <div class="imglst2">
+          <img src="../asset/IMG_20251227_082916.jpg" alt="" />
+        </div>
+        <div class="imglst2">
+          <img src="../asset/IMG_20251229_113822.jpg" alt="" />
+        </div>
+        <div class="imglst2">
+          <img src="../asset/Screenshot_2025-12-29-11-43-02-05_1c337646f29875672b5a61192b9010f9.jpg" alt="" />
+        </div>
       </div>
     </div>
-    <div class="footer" id="contact">
-      <div class="footerbox">
-        <div class="fcontent">
-          <h1>Let's get in touch</h1>
-          <p>
-            Have a project, idea, or collaboration in mind? I’m always open to
-            discussing new opportunities.
-          </p>
-        </div>
-        <div class="signaturebox">
-          <img src="../asset/IMG_20251228_094131-removebg-preview.png" alt="" />
-        </div>
+  </div>
+  <div class="journeybox" id="jrney">
+    <div class="text">
+      <h1>A Glimpse of My Journey</h1>
+      <p>Snapshots of experiences that shaped my path.</p>
+    </div>
+    <div class="boximg">
+      <div class="jcont">
+        <h2>Lessons from Home</h2>
+        <p>
+          Born in Pali village, but grew up in Ulundurpet. This is where I
+          learned my life lessons. Now, I am ready to explore new
+          opportunities.
+        </p>
       </div>
-      <div class="contact">
+      <div class="images">
+        <img src="../asset/place_name.png" alt="" />
+      </div>
+    </div>
+    <div class="boximg">
+      <div class="jcont">
+        <h2>10th Grade Journey</h2>
+        <p>
+          I did my 10th grade at Beschi Hr Sec School. There, I faced
+          challenges that taught me how to solve problems. This experience
+          prepared me for my future.
+        </p>
+      </div>
+      <div class="images"><img src="../asset/beschi .jpeg" alt="" /></div>
+    </div>
+    <div class="boximg">
+      <div class="jcont">
+        <h2>12th Grade Milestone</h2>
+        <p>
+          My time in a Government School for 12th grade changed me. I became
+          more focused. Now, I am ready for new challenges.
+        </p>
+      </div>
+      <div class="images"><img src="../asset/12th.png" alt="" /></div>
+    </div>
+    <div class="boximg">
+      <div class="jcont">
+        <h2>Curious Traveler</h2>
+        <p>
+          I love traveling and visiting new places. I enjoy learning about
+          different cultures and trying new experiences. Traveling inspires me
+          and helps me see life in a new way.
+        </p>
+      </div>
+      <div class="images"><img src="../asset/travelling.jpg" alt="" /></div>
+    </div>
+  </div>
+  <div class="footer" id="contact">
+    <div class="footerbox">
+      <div class="fcontent">
+        <h1>Let's get in touch</h1>
+        <p>
+          Have a project, idea, or collaboration in mind? I’m always open to
+          discussing new opportunities.
+        </p>
+      </div>
+      <div class="signaturebox">
+        <img src="../asset/IMG_20251228_094131-removebg-preview.png" alt="" />
+      </div>
+    </div>
+    <div class="contact">
+      <div>
+        <h3>Email</h3>
+        <a href="">
+          <p>aamstrong522@gmial.com</p>
+        </a>
+      </div>
+      <div>
+        <h3>Contact</h3>
+        <a href="">
+          <p>91+ 8148060827</p>
+        </a>
+      </div>
+      <div class="media">
         <div>
-          <h3>Email</h3>
-          <a href=""><p>aamstrong522@gmial.com</p></a>
+          <a href="https://www.linkedin.com/in/amstrong-b-75b1b7380/"><img src="../asset/linkedin.png" alt="" /></a>
         </div>
         <div>
-          <h3>Contact</h3>
-          <a href=""><p>91+ 8148060827</p></a>
+          <a href="https://www.instagram.com/lost.amz._/"><img src="../asset/instagram.png" alt="" /></a>
         </div>
-        <div class="media">
-          <div>
-            <a href="https://www.linkedin.com/in/amstrong-b-75b1b7380/"><img src="../asset/linkedin.png" alt="" /></a>
-          </div>
-          <div>
-            <a href="https://www.instagram.com/lost.amz._/"><img src="../asset/instagram.png" alt="" /></a>
-          </div>
-          <div>
-            <a
-              href="https://mail.google.com/mail/?view=cm&to=aamstrong522@gmail.com"
-              ><img src="../asset/gmail.png" alt=""
-            /></a>
-          </div>
-          <div>
-            <a
-              href="https://wa.me/918148060827?text=Hi%20Amstrong%2C%20I%20visited%20your%20portfolio"
-              ><img src="../asset/whatsapp.png" alt=""
-            /></a>
-          </div>
+        <div>
+          <a href="https://mail.google.com/mail/?view=cm&to=aamstrong522@gmail.com"><img src="../asset/gmail.png"
+              alt="" /></a>
+        </div>
+        <div>
+          <a href="https://wa.me/918148060827?text=Hi%20Amstrong%2C%20I%20visited%20your%20portfolio"><img
+              src="../asset/whatsapp.png" alt="" /></a>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
