--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         <img src="./asset/javascript.png" alt="" />
       </div>
       <div class="icon">
+        <img src="./asset/react.jpg" alt="" />
+      </div>
+      <div class="icon">
         <img src="./asset/python_vertical_logo_icon_168039.png" alt="" />
       </div>
       <div class="icon">
@@ -83,6 +86,9 @@
       </div>
       <div class="icon">
         <img src="./asset/javascript.png" alt="" />
+      </div>
+      <div class="icon">
+        <img src="./asset/react.jpg" alt="" />
       </div>
       <div class="icon">
         <img src="./asset/python_vertical_logo_icon_168039.png" alt="" />
@@ -113,7 +119,7 @@
         ensure safety and transparency, helping support medical emergencies
         and people in need.
       </p>
-      <a href="https://amstrongbaskaran.github.io/Crowd_funding/"><button>View</button></a>
+      <a href="https://lifegivers18.netlify.app/"><button>View</button></a>
     </div>
     <div class="cardimg">
       <img src="./asset/ligegiver.png" alt="Lifegiver project image" />
