--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -23,118 +23,98 @@
       </a>
     </ul>
   </div>
-  <div class="herosec">
-    <div class="herocont">
-      <h1>I Knew You’d Come!</h1>
-      <p>Welcome to my real life...</p>
-      <p>Hi there! I'm Amstrong👋,</p>
-      <p>A web development learner 🌱,</p>
-      <p>A design explorer 🎨,</p>
-      <p>A Curious Traveler 🌍✈️</p>
-      <p>A future full-stack developer 🚀 (loading… 😜)</p>
-      <br />
-      <!-- <h2>Dive in to know what makes me, well... ME!</h2> -->
+  <section class="about-hero">
+    <div class="bio-col">
+      <h1>My Story</h1>
+      <p>I am from Ulundurpet, Tamil Nadu, and I come from a humble background where responsibilities became part of my
+        life at an early age. I completed my 10th standard and finished my 12th standard in 2024 at a Government School,
+        where I learned the value of discipline, hard work, and patience. After completing my 12th standard, I
+        planned to continue my higher education; however, due to financial problems and family circumstances following
+        my father's passing in 2019, I took responsibility to support my family instead of joining college. Even during
+        these difficult times, I never stopped learning. My journey into technology started with zero coding knowledge,
+        but after joining Freshworks STS Software Academy, I received hands-on training in full-stack web development.
+        Through dedication, I developed myself as a Full-Stack Developer capable of building functional web
+        applications. Today, my goal is to grow by contributing to meaningful projects and becoming a reliable member of
+        a professional team. I believe responsibility, resilience, and continuous learning define who I am today.</p>
     </div>
-    <div class="heroimg">
-      <div class="imgbox">
-        <div class="imglst1">
-          <img src="../asset/IMG_20251227_080616.jpg" alt="" />
-        </div>
-        <div class="imglst1">
-          <img src="../asset/IMG_20251102_175105_246.jpg" alt="" />
-        </div>
-        <div class="imglst1">
-          <img src="../asset/IMG_20251227_082500.jpg" alt="" />
-        </div>
-        <div class="imglst1">
-          <img src="../asset/IMG_20251227_080616.jpg" alt="" />
-        </div>
-        <div class="imglst1">
-          <img src="../asset/IMG_20251102_175105_246.jpg" alt="" />
-        </div>
-        <div class="imglst1">
-          <img src="../asset/IMG_20251227_082500.jpg" alt="" />
+    <div class="collage-col">
+      <div class="p-card pc1"><img src="../asset/IMG_20250716_182517.jpg"></div>
+      <div class="p-card pc2"><img src="../asset/squad_photo.jpg"></div>
+      <div class="p-card pc3"><img src="../asset/class_group_photo (1).jpg"></div>
+    </div>
+  </section>
+  <section class="milestone-timeline" id="jrney">
+    <div class="timeline-intro">
+
+      <h1>Achievements & Recognition</h1>
+      <p>A professional record of my milestones and competitive wins.</p>
+    </div>
+
+    <div class="timeline-wrapper">
+      <!-- Achievement 1 -->
+      <div class="milestone-item">
+        <div class="m-content">
+          <div class="m-text">
+
+            <h3>Essay Writing Competition</h3>
+            <p>Received a Certificate of Appreciation in an essay writing competition conducted by a Tamil Sangam. This
+              recognition helped improve my writing ability, creativity, and confidence in expressing ideas clearly.</p>
+          </div>
+          <div class="m-image">
+            <img src="../asset/katturai.jpg" alt="Essay writing">
+          </div>
         </div>
       </div>
-      <div class="imgbox">
-        <div class="imglst2">
-          <img src="../asset/IMG_20250908_213846_569.webp" alt="" />
+
+      <!-- Achievement 2 -->
+      <div class="milestone-item m-reverse">
+        <div class="m-content">
+          <div class="m-text">
+
+            <h3>Cybersecurity Webinar</h3>
+            <p>Successfully participated in a Cybersecurity Webinar conducted by Center for Innovation and Software
+              Learning on February 8, 2026. Gained knowledge about cybersecurity fundamentals, online safety practices,
+              and the importance of protecting digital systems and user data. This session improved my awareness of
+              secure development practices and modern cyber threats.</p>
+          </div>
+          <div class="m-image">
+            <img src="../asset/Amstrong-Cybersecurity-Webinar-Certificate (1).png" alt="Cybersecurity Webinar">
+          </div>
         </div>
-        <div class="imglst2">
-          <img src="../asset/IMG_20251227_082916.jpg" alt="" />
+      </div>
+
+      <!-- Achievement 3 -->
+      <div class="milestone-item">
+        <div class="m-content">
+          <div class="m-text">
+
+            <h3>Life Skills Product Building — 2nd Place</h3>
+            <p>Received second place in a Life Skills Product Building project, where I worked on teamwork, sales,
+              marketing, and product presentation, improving my collaboration and communication skills.</p>
+          </div>
+          <div class="m-image">
+            <img src="../asset/squad_photo.jpg" alt="Squad Presentation">
+          </div>
         </div>
-        <div class="imglst2">
-          <img src="../asset/IMG_20251229_113822.jpg" alt="" />
-        </div>
-        <div class="imglst2">
-          <img src="../asset/Screenshot_2025-12-29-11-43-02-05_1c337646f29875672b5a61192b9010f9.jpg" alt="" />
-        </div>
-        <div class="imglst2">
-          <img src="../asset/IMG_20250908_213846_569.webp" alt="" />
-        </div>
-        <div class="imglst2">
-          <img src="../asset/IMG_20251227_082916.jpg" alt="" />
-        </div>
-        <div class="imglst2">
-          <img src="../asset/IMG_20251229_113822.jpg" alt="" />
-        </div>
-        <div class="imglst2">
-          <img src="../asset/Screenshot_2025-12-29-11-43-02-05_1c337646f29875672b5a61192b9010f9.jpg" alt="" />
+      </div>
+
+      <!-- Achievement 4 -->
+      <div class="milestone-item m-reverse">
+        <div class="m-content">
+          <div class="m-text">
+
+            <h3>Squad Presentation — 2nd Place</h3>
+            <p>Received second place in a squad presentation at Freshworks STS Software Academy. Worked with my team to
+              present ideas clearly and confidently. This experience improved my teamwork, communication, and
+              presentation skills.</p>
+          </div>
+          <div class="m-image">
+            <img src="../asset/team.jpg" alt="Squad Presentation">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="journeybox" id="jrney">
-    <div class="text">
-      <h1>A Glimpse of My Journey</h1>
-      <p>Snapshots of experiences that shaped my path.</p>
-    </div>
-    <div class="boximg">
-      <div class="jcont">
-        <h2>Lessons from Home</h2>
-        <p>
-          Born in Pali village, but grew up in Ulundurpet. This is where I
-          learned my life lessons. Now, I am ready to explore new
-          opportunities.
-        </p>
-      </div>
-      <div class="images">
-        <img src="../asset/place_name.png" alt="" />
-      </div>
-    </div>
-    <div class="boximg">
-      <div class="jcont">
-        <h2>10th Grade Journey</h2>
-        <p>
-          I did my 10th grade at Beschi Hr Sec School. There, I faced
-          challenges that taught me how to solve problems. This experience
-          prepared me for my future.
-        </p>
-      </div>
-      <div class="images"><img src="../asset/beschi .jpeg" alt="" /></div>
-    </div>
-    <div class="boximg">
-      <div class="jcont">
-        <h2>12th Grade Milestone</h2>
-        <p>
-          My time in a Government School for 12th grade changed me. I became
-          more focused. Now, I am ready for new challenges.
-        </p>
-      </div>
-      <div class="images"><img src="../asset/12th.png" alt="" /></div>
-    </div>
-    <div class="boximg">
-      <div class="jcont">
-        <h2>Curious Traveler</h2>
-        <p>
-          I love traveling and visiting new places. I enjoy learning about
-          different cultures and trying new experiences. Traveling inspires me
-          and helps me see life in a new way.
-        </p>
-      </div>
-      <div class="images"><img src="../asset/travelling.jpg" alt="" /></div>
-    </div>
-  </div>
+  </section>
   <div class="footer" id="contact">
     <div class="footerbox">
       <div class="fcontent">
