--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </p>
       <div class="btns">
         <a href="#works"><button class="btn1">See My Work ⬇</button></a>
-        <a href="./html_pages/about.html"><button class="btn2">About More ➚</button></a>
+        <a href="./html_pages/about.html"><button class="btn2">Know More ➚</button></a>
       </div>
     </div>
     <div class="heroimg">
@@ -137,56 +137,6 @@
       <a href=" https://amstrongbaskaran.github.io/E-commerce/"><button>View</button></a>
     </div>
     <div class="cardimg"><img src="./asset/ecom.png" alt="" /></div>
-  </div>
-  <div class="sec2">
-    <h2>Achievements</h2>
-    <p>
-      Achievements that reflect my learning journey.<br />
-      <span>Here’s what I’ve achieved so far !</span>
-    </p>
-  </div>
-  <div class="achievments">
-    <div class="achievbox">
-      <div class="achievimg">
-        <img src="./asset/squad_photo.jpg" alt="" />
-      </div>
-      <h3>Product Building Challenge</h3>
-      <p>Secured 2nd place</p>
-    </div>
-    <div class="achievbox">
-      <div class="achievimg">
-        <img src="./asset/katturai.jpg" alt="" />
-        <h3>Essay Writing Competition</h3>
-        <p>Secured 2nd Place</p>
-      </div>
-    </div>
-    <div class="achievbox">
-      <div class="achievimg">
-        <img src="./asset/abacus.jpg" alt="" />
-        <h3>Abacus Level 1 and Level 2</h3>
-        <p>Successfully completed</p>
-      </div>
-    </div>
-    <div class="achievbox">
-      <div class="achievimg">
-        <img src="./asset/englishcertificate.jpg" alt="" />
-        <h3>Completed English Language Training</h3>
-        <p>focus on communication skills</p>
-      </div>
-    </div>
-    <div class="achievbox">
-      <div class="achievimg">
-        <img src="./asset/volleyball.jpg" alt="" />
-        <h3>Won First Prize in School Level Volleyball Competition</h3>
-      </div>
-    </div>
-    <div class="achievbox">
-      <div class="achievimg">
-        <img src="./asset/team.jpg" alt="" />
-        <h3>Team Presentation</h3>
-        <p>Secured 2nd place</p>
-      </div>
-    </div>
   </div>
 
   <div class="footer" id="contact">
