--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="./html_pages/about.html">
         <li>About</li>
       </a>
-      <a href="https://drive.google.com/file/d/1m-14sL_SnKT-5q1gdSPQ1aWzKRJ3C-r-/view">
+      <a href="https://drive.google.com/file/d/1l1_IrLJ8EPjJkW577W1Gj_ejju7e-80n/view?usp=sharing">
         <li>Resume</li>
       </a>
       <a href="#contact">
