remove unused image assets and update about section content

--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -23,16 +23,13 @@
   <section class="about-hero">
     <div class="bio-col">
       <h1>My Story</h1>
-      <p>I am from Ulundurpet, Tamil Nadu, and I come from a humble background where responsibilities became part of my
-        life at an early age. I completed my 10th standard and finished my 12th standard in 2024 at a Government School,
-        where I learned the value of discipline, hard work, and patience. After completing my 12th standard, I
-        planned to continue my higher education; however, due to financial problems and family circumstances following
-        my father's passing in 2019, I took responsibility to support my family instead of joining college. Even during
-        these difficult times, I never stopped learning. My journey into technology started with zero coding knowledge,
-        but after joining Freshworks STS Software Academy, I received hands-on training in full-stack web development.
-        Through dedication, I developed myself as a Full-Stack Developer capable of building functional web
-        applications. Today, my goal is to grow by contributing to meaningful projects and becoming a reliable member of
-        a professional team. I believe responsibility, resilience, and continuous learning define who I am today.</p>
+      <p>I am from Ulundurpet, Tamil Nadu, and I come from a simple background. I completed my 10th and 12th standards
+        at a Government School and finished my 12th in 2024. After my father passed away in 2019, I had family and
+        financial responsibilities, so I could not continue college and chose to support my family. Even during that
+        time, I did not stop learning. I joined Freshworks STS Software Academy and started learning coding from the
+        basics. There, I gained hands-on experience in full-stack web development and built real projects. Today, my
+        goal is to grow as a developer, contribute to meaningful work, and become a responsible and reliable team
+        member.</p>
     </div>
     <div class="collage-col">
       <div class="p-card pc1"><img src="../asset/IMG_20250716_182517.jpg"></div>
@@ -85,28 +82,13 @@
         <div class="m-content">
           <div class="m-text">
 
-            <h3>Life Skills Product Building — 2nd Place</h3>
-            <p>Received second place in a Life Skills Product Building project, where I worked on teamwork, sales,
-              marketing, and product presentation, improving my collaboration and communication skills.</p>
+            <h3>Life Skills Product Building & Squad Presentation — 2nd Place</h3>
+            <p>Achieved second place in Life Skills Product Building and Squad Presentation activities. Worked with my
+              team on product ideas, sales, marketing, and presentations, improving my teamwork, communication, and
+              presentation skills</p>
           </div>
           <div class="m-image">
             <img src="../asset/squad_photo.jpg" alt="Squad Presentation">
-          </div>
-        </div>
-      </div>
-
-      <!-- Achievement 4 -->
-      <div class="milestone-item m-reverse">
-        <div class="m-content">
-          <div class="m-text">
-
-            <h3>Squad Presentation — 2nd Place</h3>
-            <p>Received second place in a squad presentation at Freshworks STS Software Academy. Worked with my team to
-              present ideas clearly and confidently. This experience improved my teamwork, communication, and
-              presentation skills.</p>
-          </div>
-          <div class="m-image">
-            <img src="../asset/team.jpg" alt="Squad Presentation">
           </div>
         </div>
       </div>
@@ -129,7 +111,7 @@
       <div>
         <h3>Email</h3>
         <a href="">
-          <p>aamstrong522@gmial.com</p>
+          <p>aamstrong522@gmail.com</p>
         </a>
       </div>
       <div>
