--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         ensure safety and transparency, helping support medical emergencies
         and people in need.
       </p>
-      <a href="https://lifegivers18.netlify.app/"><button>View</button></a>
+      <a href="https://lifegivers18.netlify.app/" target="_blank"><button>View</button></a>
     </div>
     <div class="cardimg">
       <img src="./asset/ligegiver.png" alt="Lifegiver project image" />
@@ -131,7 +131,7 @@
         learn basic page structure, styling, and simple UI design. It includes
         a clean layout with product listings and easy navigation.
       </p>
-      <a href=" https://amstrongbaskaran.github.io/E-commerce/"><button>View</button></a>
+      <a href=" https://amstrongbaskaran.github.io/E-commerce/" target="_blank"><button>View</button></a>
     </div>
     <div class="cardimg"><img src="./asset/ecom.png" alt="" /></div>
   </div>
